# burncloud-database-download

./: Cargo.toml  README.md  TODO.md  test_downloads.db
docs/: README.md  architecture_overview.md  database-design.md  error.md  lib.md  models.md  models_flowcharts.md  repository.md  repository_flowcharts.md  schema.md  schema_flowcharts.md
examples/: basic_usage.rs  real_database.rs  verify_database.rs
src/: error.rs  lib.rs  models.rs  repository.rs  schema.rs
tests/: integration_tests.rs  models_tests.rs  repository_tests.rs  schema_tests.rs
