[package]
name = "burncloud-database-download"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
burncloud-database = { path = "../burncloud-database" }
burncloud-download = { path = "../burncloud-download" }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Utilities
async-trait = "0.1"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
