[package]
name = "burncloud-database-download"
version = "0.1.0"
edition = "2021"

[dependencies]
burncloud-database = { path = "../burncloud-database" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }